OpenShift/services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-personalise
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30090
  selector:
    app: frontend
