OpenShift/services/route-back.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend-personalise
  labels:
    name: backend
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 3001
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
